<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Activity Life Cycle-->
        <TextView
            android:padding="10dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:id="@+id/textView"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <!--OnCreateMethod()-->
        <TextView
            android:id="@+id/onCreate"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:text="@string/oncreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--OnStartMethod()-->
        <TextView
            android:id="@+id/onStart"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:text="@string/onstart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/onResume"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:text="@string/onResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/activityRunning"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/running"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/onPause"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:text="@string/onpuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/onStop"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:text="@string/onstop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/onDestry"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:text="@string/ondestroy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/onrestart"
            android:textSize="15sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:text="@string/restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>

</LinearLayout>